--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,19 +5,22 @@
 
 main:
   - name: Demo
-    url: '#about'
+    url: '#demo'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
-  - name: Projects
-    url: '#projects'
+#  - name: Posts
+#    url: '#posts'
+#    weight: 20
+#  - name: Projects
+#    url: '#projects'
+#    weight: 30
+  - name: Resume
+    url: resume/
     weight: 30
   - name: Talks
     url: '#talks'
     weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 50
   - name: Courses
     url: courses/
