--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,27 +4,18 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Demo
-    url: '#demo'
-    weight: 10
-#  - name: Posts
-#    url: '#posts'
-#    weight: 20
-#  - name: Projects
-#    url: '#projects'
-#    weight: 30
-  - name: Resume
-    url: resume/
-    weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
+  - name: About
+    url: '#about'
+    weight: 1
   - name: Publications
-    url: '#publications'
-    weight: 50
-  - name: Courses
-    url: courses/
-    weight: 60
+    url: publications/
+    weight: 2
+  - name: Teaching
+    url: teaching/
+    weight: 3
+  - name: Service
+    url: service/
+    weight: 4
   - name: Contact
     url: '#contact'
-    weight: 70
+    weight: 5
